--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["plugin:prettier/recommended"]
+  "printWidth": 160,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "jsxSingleQuote": true
 }
