infra: update style check, include lib

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
           node-version: 17.x
 
       - run: npm install --location=global prettier
-      - run: prettier --check "src/**/*.{js,ts,tsx}" "./**/*.{json,yml,yaml}"
+      - run: prettier --check "./**/*.{js,ts,tsx,json,yml,yaml}"
