infra: configure script to publish package to codeartifact
* infra: configure script to publish package to codeartifact

* style: refomat code

---------

Co-authored-by: amourRamanantsiresy <hei.amour.2@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bpatners/annotator-component",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
