--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": false,
   "version": "0.2.0",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
