--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -91,7 +91,7 @@ jobs:
 
     steps:
       ###############################################################
-      ########## GENERATE AND PUBLISH TYPESCRIPT CLIENT #############
+      ################# PUBLISH TYPESCRIPT CLIENT ###################
       ###############################################################
 
       - uses: actions/checkout@v4.1.1
@@ -117,6 +117,6 @@ jobs:
 
       - name: Publish package
         run: |
-          echo -e "\n*.ts\nnode_module\n!*.d.ts\n.idea\n.vscode\n.openapi-generator\n.openapi-generator-ignore\ngit_push.sh" >> .npmignore
           npm install
+          npm run build
           npm publish
