--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@bpartners/annotator-component",
   "version": "0.3.0",
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "./dist",
