chore: install geolib library & debounce

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:component": "cypress run --component"
   },
   "peerDependencies": {
+    "debounce": "^2.0.0",
+    "geolib": "^3.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
